site: add a page to display game details given a game id

--- a/static/index.html
+++ b/static/index.html
@@ -21,7 +21,7 @@ with the goal of filling the nightclub with 1000 people, while satisfying severa
 bound constraints on the number of patrons with each flavor attribute admitted.</p>
 <p>That version was a bit too easy because it considered only static lower bounds, and
 the scoring approach (lowest rejection of all attempts) selected for players who submitted
-many trials, rather than efficiently identifying optimal algorithms.</p>
+many trials, rather than efficiently identifying high performing algorithms.</p>
 <p>Here we introduce a clone of the game with support for more complicated bounds
 structures (plus some easy ones to get warmed up on) along with scoring relative to an
 offline algorithm's rejection count for the same sequence, allowing successful algorithms
