site: set up for having the ability to browse games

--- a/static/index.html
+++ b/static/index.html
@@ -10,6 +10,7 @@
 	  referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="/ocs.css" />
   <script type="text/javascript" src="/ocs.js"></script>
+  <script type="text/javascript" src="/index.js"></script>
 </head>
 <body>
 
@@ -57,8 +58,7 @@ GET request to start a game and receive a game UUID, then you will use this UUID
 request new symbols and accept or reject pending symbols.</p>
 
 <h2>Game Status</h2>
-<p>Here there will eventually be an interface to see information about games played,
-grouped by user or by scenario.</p>
+<p id="recent_games"></p>
 
 <h2>API</h2>
 <p>The basic game API is:</p>
