site: cosmetic fixes and improvements for ui

--- a/static/game.html
+++ b/static/game.html
@@ -17,7 +17,7 @@
 <div id="details"></div>
 <h2>Lookup</h2>
 <div id="prompt">
-  <input type="text" id="gameid" size="40" />
+  <input type="text" id="gameid" size="40" placeholder="game id or uuid" />
   <input type="button" value="View Game" onclick="load_form_game();" />
 </div>
 </body>
